2005-07-28  Jeff Hobbs  <jeffh@ActiveState.com>

	* macosx/tkMacOSXWm.c (TkpWmSetState): add IsWindowCollapsed check
	before calling CollapseWindow.
	(WmResizableCmd): adjust kWindow*Attributes according to resize
	parameters.

	* macosx/tkMacOSXMouseEvent.c (TkMacOSXProcessMouseEvent): handle
	inToolbarButton action (generates <<ToolbarButton>> virtual event)
	and correct inCollapseBox to properly track the event (waiting for
	buttonrelease) and generate the Unmap event (Map event on
	redisplay still missing).

2005-07-27  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkFrame.c (DisplayFrame):
	* generic/tkInt.decls:  add TkpDrawFrame to allow for
	* generic/tkIntDecls.h: platform-specific drawing into the frame/
	* generic/tkStubInit.c: toplevel area.  Currently only differs on
	* generic/tkFrame.c:    OS X (Aqua), which will draw a themed bg
	* win/tkWinDraw.c:      if tk::mac::useThemedToplevel == 1.
	* unix/tkUnixDraw.c:    Normal frames left alone until we can
	* mac/tkMacDraw.c:      better factor out frame drawing to be
	* macosx/tkMacDraw.c:   widget-specific.

	* generic/tkInt.h: Swap TkUnsupported1Cmd for TkUnsupported1ObjCmd.
	* generic/tkWindow.c: Ditto. (neil madden)
	* macosx/tkMacOSXInt.h: Added TkMacOSXWindowClass decl
	* macosx/tkMacOSXWm.c (TkMacOSXWinStyle) New function.
	(TkUnsupported1ObjCmd): New function, replaces the un-objectified
	version of the command, recognizes more classes and attributes.
	(TkMacOSXWindowClass): private function to return OS X class of a
	Tk window.
	* macosx/tkMacOSXSubwindows.c (XMapWindow, XUnmapWindow):
	recognize special show/hide functions for sheets

2005-07-24  Mo DeJong  <mdejong@users.sourceforge.net>
	
	* unix/Makefile.in: Subst TCLSH_PROG and
	BUILD_TCLSH into Makefile. Rework html
	target so that it depends on the tclsh
	installed on the system PATH.
	* unix/configure: Regen.
	* unix/configure.in: Invoke SC_PROG_TCLSH
	and SC_BUILD_TCLSH and subst into Makefile.
	* unix/tcl.m4: Update from Tcl.